--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ description = "An assembler for the Gheith ISA written in Rust"
 readme = "README.md"
 homepage = "https://github.com/migopp/rgsm"
 repository = "https://github.com/migopp/rgsm"
+exclude = [
+    "tests/*",
+    "hex/*",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
